Implement transformations for painting assistants

BUG:331789